// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.subscribeToEvent admin wants to subscribe to an event. 1`] = `
Object {
  "subscribeToEventAsRegistered": Object {
    "event": Object {
      "id": "RXZlbnQ6ZXZlbnQ0",
    },
  },
}
`;

exports[`mutations.subscribeToEvent anonymous wants to subscribe to event as anonymous. 1`] = `
Object {
  "subscribeToEventAsNonRegistered": Object {
    "event": Object {
      "id": "RXZlbnQ6ZXZlbnQ0",
    },
  },
}
`;

exports[`mutations.subscribeToEvent anonymous wants to subscribe to event. 1`] = `
Object {
  "subscribeToEventAsNonRegistered": Object {
    "event": Object {
      "id": "RXZlbnQ6ZXZlbnQ0",
    },
  },
}
`;

exports[`mutations.subscribeToEvent user wants to subscribe to event as anonymous. 1`] = `
Object {
  "subscribeToEventAsRegistered": Object {
    "event": Object {
      "id": "RXZlbnQ6ZXZlbnQ0",
    },
  },
}
`;

exports[`mutations.subscribeToEvent user wants to subscribe to event. 1`] = `
Object {
  "subscribeToEventAsRegistered": Object {
    "event": Object {
      "id": "RXZlbnQ6ZXZlbnQ0",
    },
  },
}
`;
